# ros2_learn

./: .clang-format  .gitignore  README.md
install/: local_setup.sh  setup.sh
install/ros_cpp_node/lib/ros_cpp_node/: ros_cpp_node
install/ros_cpp_node/share/ros_cpp_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ros_cpp_node/share/ros_cpp_node/cmake/: ros_cpp_nodeConfig.cmake
log/: latest_build
node/: CMakeLists.txt  package.xml  ros_cpp_node
node/node_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml  smart_pointers_notes.md  smart_pointers_notes_short.md
node/node_ws/src/demo_cpp_pkg/src/: demo_cpp_node.cpp  learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  person_node.cpp
node/node_ws/src/demo_python_pkg/: package.xml  setup.py
node/node_ws/src/demo_python_pkg/demo_python_pkg/: python_node.py  writer_node.py
node/src/: ros2_cpp_node.cpp
